apply scrollbar styling to all scrollbars, add fix for horizontal

--- a/app/global.css
+++ b/app/global.css
@@ -78,16 +78,23 @@ html {
 }
 
 /* scrollbar styling (webkit vendor prefix) */
-html::-webkit-scrollbar {
+*::-webkit-scrollbar {
+    /* for vertical scrollbar */
     width: 1rem;
+    /* for horizontal scrollbar */
+    height: 1rem;
 }
 
-html::-webkit-scrollbar-track {
+*::-webkit-scrollbar-track {
     background-color: #111;
 }
 
-html::-webkit-scrollbar-thumb {
+*::-webkit-scrollbar-thumb {
     background: linear-gradient(var(--tertiary-light-color) 0%, var(--primary-light-color) 95%);
+}
+
+*::-webkit-scrollbar-thumb:horizontal {
+    background: linear-gradient(95deg, var(--tertiary-light-color) 0%, var(--primary-light-color) 95%);
 }
 
 body {
@@ -729,6 +736,6 @@ h6 .headingAnchor {
 
 .buyMeACoffeeButtonContainer {
     width: 100%;
-    text-align:center;
+    text-align: center;
     margin-top: calc(var(--main-spacing) * 2);
 }
